overflow bug fixed

--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -12,7 +12,7 @@
     margin: auto;
     margin-top: 20px;
     width: 100%;
-    padding: 10px;
+    padding: 4px 10px 10px 10px;
     // padding-bottom: 30px;
     justify-content: center;
     align-items: center;
@@ -20,7 +20,7 @@
    
 }
 .form-group {
-    padding: 10px;
+    padding: 4px;
 }
 
 .createAccount:hover,.backToLogin:hover{
